.gitops/azure/azure-custom-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: azure-cognitive-service-custom-api
  labels:
    app.kubernetes.io/instance: azure-cognitive-service-custom-api
    app.kubernetes.io/name: azure-cognitive-service-custom-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: azure-cognitive-service-custom-api
    app.kubernetes.io/name: azure-cognitive-service-custom-api
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
