.gitops/azure/azure-custom-proxy-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: forms-recognizer
  labels:
    app.kubernetes.io/instance: azure-cognitive-service-custom-proxy
    app.kubernetes.io/name: azure-cognitive-service-custom-proxy
spec:
  host: forms-recognizer-0198bb-dev.apps.silver.devops.gov.bc.ca
  to:
    kind: Service
    name: azure-cognitive-service-custom-proxy
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
